<resources>
    <string name="app_name">blood</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_hint">الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="reset_password_btn_change">تغيير</string>
    <string name="reset_password_hint_check">تاكيد كلمة المرور الجديدة</string>
    <string name="reset_password_hint_newpassword">كلمة المرور الجديدة</string>
    <string name="reset_password_hint_check_code">كود التحقيق</string>
    <string name="forgetpassword_btn_send">ارسال</string>
    <string name="login_fragment_tv_creatanaccount">لا تمتلك حساب؟ يمكنك التسجيل من منا</string>
    <string name="login_fragment_tv_forget_your_password">هل نسيت كلمة السر؟</string>
    <string name="login_fragment_cb_remember_me">تذكرني</string>
    <string name="login_fragment_btn_login">دخول</string>
    <string name="register_fragment_tv_create_an_account">إنشاء حساب جديد</string>
    <string name="register_fragment_hint_name">الاسم</string>
    <string name="register_fragment_btn_register">تسجيل</string>
    <string name="register_fragment_et_confirm_password">تاكيد كلمة المرور</string>
    <string name="register_fragment_et_password">كلمة المرور</string>
    <string name="register_fragment_et_phone_number">رقم الهاتف</string>
    <string name="register_fragment_et_city">المدينة</string>
    <string name="register_fragment_et_government">المحافظة</string>
    <string name="register_fragment_et_date_of_last_donation">اخر تاريخ للتبرع</string>
    <string name="register_fragment_et_blood_type">فصيلة الدم</string>
    <string name="register_fragment_et_birthday">تاريخ الميلاد</string>
    <string name="register_fragment_et_mail">البريد الالكتروني</string>
    <string name="slider_item_temp_description">هو إجراء طبي تطوعي يتم بنقل الدم أو أحد مركباته من شخص سليم معافى إلى شخص مريض يحتاج للدم. وهذا الإجراء يحتاج إليه الملايين من الناس كل عام؛ فيستخدم أثناء الجراحة أو الحوادث أو بعض الأمراض التي تتطلب نقل بعض مكونات الدم.</string>
    <!--    #############################################################################-->
    <string-array name="spinner_blood_type">
        <item>@string/register_fragment_et_blood_type</item>
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
    </string-array>
</resources>
