<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_cycle">

    <ImageView
        android:id="@+id/reset_password_fragment_logo"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/login_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/reset_password_fragment_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_logo"
        app:layout_constraintVertical_bias="0.114">

        <EditText
            android:id="@+id/reset_password_fragment_et_check_code"
            style="@style/user_cycle_ed_style"
            android:background="@drawable/et_bg_shape"
            android:hint="@string/reset_password_hint_check_code" />

        <EditText
            android:id="@+id/reset_password_fragment_et_new_password"
            style="@style/user_cycle_ed_style"
            android:background="@drawable/et_bg_shape"
            android:hint="@string/reset_password_hint_newpassword" />

        <EditText
            android:id="@+id/reset_password_fragment_et_confirm_new_password"
            style="@style/user_cycle_ed_style"
            android:background="@drawable/et_bg_shape"
            android:hint="@string/reset_password_hint_check" />

        <Button
            android:id="@+id/reset_password_fragment_btn_change"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/et_bg_shape"
            android:fontFamily="@font/ge_snd_book"
            android:text="@string/reset_password_btn_change"
            android:textColor="@color/dark_red" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>